--- a/Example/estilos.css
+++ b/Example/estilos.css
@@ -14,6 +14,38 @@ body{
     /* overflow: hidden; */
     font-family: 'Raleway', sans-serif;
 }
+/* bt up */
+.up{    
+    position: fixed;
+    bottom: 100px;
+    right: 0;
+    width: 50px;
+    height: 50px;
+    border: 3px solid var(--blue);
+    background: #fff;
+    z-index: 9999;
+    color: var(--green);
+
+    transition: 400ms ;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+}
+.up:hover{
+    border: 3px solid var(--white);
+    background: var(--blue);
+}
+.up:hover span{
+    color: var(--white);
+
+}
+
+.up > span{
+    font-size: 30px;
+    color: var(--black);
+}
+/* bt-up */
 #header{
     position: relative;
     width: 100%;
@@ -129,3 +161,411 @@ body{
     background: var(--green);
 }
 /* header IMAGEN */
+
+/* Nosotros  */
+.acerca-de{
+    width: 100%;
+    margin-top: 100px ;
+}
+.acerca-de .info-container{
+    width: 80%;
+    margin: auto;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
+.acerca-de .info-container h1{
+    font-size: 80px;
+    font-weight: 400;
+    color: var(--black);
+    text-align: center;
+    margin-bottom: 20px;
+
+}
+.acerca-de .info-container p{
+    text-align: center;
+    font-size: 15px;
+    color: var(--black);
+    line-height: 20px;
+    margin: 10px 0px;
+}
+.acerca-de .info-container .about-gallery{
+    width:100% ;
+    display: flex;
+    justify-content: center;
+    margin: 40px 0px;
+}
+.acerca-de .info-container .about-gallery img{
+    width: calc(33.33% - 10px);
+    height: 250px;
+    object-fit: cover;
+    margin: 10px 10px;
+    border-radius: 10px;
+    cursor: pointer;
+}
+.acerca-de .info-container .about-more{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+.acerca-de .info-container .about-more button{
+    width: 150px;
+    height: 50px;
+    background: var(--blue);
+    border-radius: 30px;
+    border: none;
+    font-size: 20px;
+    color: #fff;
+    text-align: center;
+    margin-top: 20px;
+    cursor: pointer;
+    transition: 0.5s;
+}
+.acerca-de .info-container .about-more button:hover{
+    background: var(--green);
+}
+
+/* Nosotros  */
+
+/* Mis proyects */
+.our-projects{
+    position: relative;
+    width: 100%;
+    height: 100%;
+    background: url(/img/img2.jpg);
+    background-attachment: fixed;
+    background-position: center;
+    background-size: cover;
+    margin-top: 100px;
+}
+
+.our-projects .deg-background{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background:rgba(0, 0, 0, 0.7);
+}
+.our-projects .ejeZproject{
+    position: relative;
+    width: 100%;
+    height: 100%;  
+}
+.our-projects .container-project{
+    width: 90%;
+    margin: auto;
+    padding-top: 100px;
+}
+.our-projects .container-project .project-title{
+    border: 2px solid #fff;
+    position: absolute;
+    z-index: 3;
+    left: 20em;
+    top: 25px;
+    opacity: 0.9;
+    padding: 10px;
+    text-align: center;
+    width: 50%;
+    margin: auto;
+    
+}
+.our-projects .container-project .project-title h2{
+    font-size: 40px;
+    color: #fff;
+    font-weight: normal;
+
+}
+.our-projects .container-project .project-title hr{
+    background: rgb(126, 123, 123);
+    width: 100%;
+    margin-top: 10px auto;
+}
+.our-projects .container-project .project-img{
+   width: 100%;
+   display: flex;
+   justify-content: center;
+   flex-wrap: wrap;
+   margin-top: 50px;
+   padding-bottom: 100px;
+   
+}
+.our-projects .container-project .project-img img{
+    width: calc(30% - 10px);
+    margin: 15px;
+    object-fit: cover;
+    border-radius: 15px;
+    cursor: pointer;
+    position: relative;
+  
+}
+/* Mis proyects */
+
+/* Testimono */
+.testimonios{
+    width: 100%;
+    margin-top: 120px;
+}
+.testimonios .testimonios-title{
+    width: 50%;
+    margin: auto;
+    text-align:center ;
+}
+.testimonios .testimonios-title h2{
+    font-size: 50px;
+    color: var(--black);
+    font-weight: normal;
+    margin-bottom: 20px;
+}
+.testimonios .testimonios-title hr{
+    width: 60%;
+    margin: auto;
+    height: 2px;
+    background: var(--black);
+    border: none;
+}
+.testimonios .box-testimonios{
+    width: 90%;
+    margin: 70px auto;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+.testimonios .box-testimonios .card-testimonio{
+    width: 45%;
+    margin: 25px;
+}
+.testimonios .box-testimonios .card-testimonio .card-img{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.testimonios .box-testimonios .card-testimonio .card-img img{
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+    object-fit: cover;
+    cursor: pointer;
+    margin-bottom: 25px ;
+
+}
+.testimonios .box-testimonios .card-testimonio .testimonio-text{
+    width: 100%;
+    border:1px solid var(--green);
+    padding: 15px;
+    border-radius: 15px;
+    cursor: pointer;
+    transition: 200ms;
+    margin-top: 30px;
+}
+.testimonios .box-testimonios .card-testimonio .testimonio-text h4{
+    color:var(--green);
+    font-size: 35px;
+    font-weight: normal;
+    text-align: center;
+    margin-bottom: 25px ;
+    transition: 200ms;
+}
+.testimonios .box-testimonios .card-testimonio .testimonio-text p{
+    color:var(--black);
+    font-size: 20px;
+    text-align: center;
+    line-height: 30px;
+    transition: 200ms;
+
+}
+.testimonios .box-testimonios .card-testimonio .testimonio-text:hover{
+    border: 5px solid var(--blue);
+
+}
+.testimonios .box-testimonios .card-testimonio .testimonio-text:hover h4{
+    color: var(--blue);
+}
+/* Testimono */
+
+/* footer */
+.footer{
+    position: relative;
+    width: 100%;
+    height: 100%;
+    background: url(img/tecn1.jpg);
+    background-attachment: fixed;
+    background-position:center ;
+    background-size: cover;
+}
+ .footer .deg-footer{
+    width: 100%;
+    height: 100%;
+} 
+
+.footer .ejeZfooter{
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.7);
+} 
+.footer .ejeZfooter{
+    position: relative;
+    width: 100%;
+    height: 100%;
+}
+.footer .footer-content{
+    width: 80%;
+    padding-top: 100px ;
+    margin: auto;
+}
+.footer .footer-content .footer-title{
+    width: 60%;
+    margin: auto;
+    border: 5px solid var(--white);
+    padding: 5px;
+}
+.footer .footer-content .footer-title h2{
+    text-align: center;
+    color: #fff;
+    font-size: 30px;
+    font-weight: normal;
+    margin-bottom: 10px;
+}
+.footer .footer-content .footer-title hr{
+    width: 80%;
+    margin: 10px auto;
+}
+.footer .footer-content .formulario-content{
+    width: 80%;
+    background: var(--white);
+    border-radius: 25px;
+    border: 5px solid var(--blue);
+    margin: 40px auto;
+    padding: 20px;
+    margin-bottom: 50px;
+}
+.footer .footer-content .formulario-content #formulario{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
+.footer .footer-content .formulario-content #formulario label{
+    text-align: center;
+    color: var(--black);
+    font-size: 30px;
+    margin: 30px 0px 10px 0px;
+}
+.footer .footer-content .formulario-content #formulario input{
+    width: 90%;
+    height: 40px;
+    margin: auto;
+    border: 2px solid var(--blue);
+    border-radius: 25px;
+    outline: none;
+    text-align: center;
+    font-size: 20px;
+    color: var(--black);
+}
+.footer .footer-content .formulario-content #formulario textarea{
+    width: 90%;
+    height: 150px;
+    margin: auto;
+    border-radius: 25px;
+    border: 2px solid var(--blue);
+    outline: none;
+    font-size: 15px;
+    color: var(--black);
+    padding: 15px;
+}
+.footer .footer-content .formulario-content #formulario .send{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    margin: 40px 0px;
+}
+.footer .footer-content .formulario-content #formulario .send button{
+    width: 150px;
+    height: 50px;
+    background: var(--blue);
+    border-radius: 30px;
+    border: none;
+    font-size: 20px;
+    color: #fff;
+    text-align: center;
+    margin-top: 20px;
+    cursor: pointer;
+    transition: 0.5s;
+}
+.footer .footer-content .formulario-content #formulario .send button:hover{
+    background: var(--green);
+}
+.footer .footer-content .formulario-content #formulario .mensaje-form{
+    text-align: center;
+}
+.footer .footer-content .footer-text{
+    position: relative;
+    height: 40px;
+    bottom: 0;
+    left: 0;
+    background: rgba(0, 0, 0, 0.7);
+    width: 100%;
+    border-top: 2px solid #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.footer .footer-content .footer-text p{
+    color: var(--white);
+    font-size:25px;
+}
+/* footer */
+
+/* Responsive */
+@media only screen and (max-width:900px){
+    .btn-menu > .fa-bars{
+        display: block;
+        position: absolute;
+        top: 20px;
+        right: 35px;
+        font-size: 30px;
+        cursor: pointer;
+    }
+    .btn-menu > .fa-bars:hover{
+        color: var(--blue);
+    }
+    .btn-menu > .fa-bars{
+        color: var(--blue);
+    }
+    .menu .list-container{
+        position: absolute;
+        top: 60px;
+        left: -100%;
+        width: 100%;
+        height: calc(100vh -60px);
+        background: #fff;
+    }
+    .menu .list-container .lists{
+        width: 100%;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        border-top: 3px solid var(--blue) ;
+
+    }
+    .menu .list-container .lists li{
+        width: 90%;
+        margin:10px 0px;
+        border-bottom:1px solid var(--blue) ;
+        text-align: center;
+    }
+    .menu .list-container .lists li a{
+        margin: 5px 0px;
+        font-size: 15px;
+    }
+    .menu .list-container .lists li a.active{
+        background: none;
+        color: var(--blue);
+    }
+    .menu .list-container .lists li a:hover{
+        background: none;
+        color: var(--blue);
+    }
+}
