--- a/Example/estilos.css
+++ b/Example/estilos.css
@@ -515,6 +515,27 @@ body{
     font-size:25px;
 }
 /* footer */
+/* eraseabajo */
+.erase-abajo{
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    border-width: 0 0 25vh 100vw;
+    border-style: solid;
+    border-color: transparent transparent #fff transparent;
+}
+.erase-arriba{
+    position: absolute;
+    top: 0;
+    left: 0;
+    border-width: 3vh 100vw 0 0;
+    border-style: solid;
+    border-color:  #fff transparent transparent transparent;
+    z-index: 10;
+}
+
+
+/* eraseabajo */
 
 /* Responsive */
 @media only screen and (max-width:900px){
