--- a/Example/estilos.css
+++ b/Example/estilos.css
@@ -15,7 +15,7 @@ body{
     font-family: 'Raleway', sans-serif;
 }
 /* bt up */
-.up{    
+.arriba{    
     position: fixed;
     bottom: 100px;
     right: 0;
@@ -32,16 +32,16 @@ body{
     align-items: center;
     cursor: pointer;
 }
-.up:hover{
+.arriba:hover{
     border: 3px solid var(--white);
     background: var(--blue);
 }
-.up:hover span{
+.arriba:hover span{
     color: var(--white);
 
 }
 
-.up > span{
+.arriba > span{
     font-size: 30px;
     color: var(--black);
 }
@@ -588,5 +588,69 @@ body{
     .menu .list-container .lists li a:hover{
         background: none;
         color: var(--blue);
+    }
+}
+@media only screen and (max-width: 775px){
+    .img-header .welcome h1{
+        font-size: 40px;
+
+    }
+    .img-header .welcome > button {
+        width: 130px;
+        font-size: 20px;
+    }
+    .acerca-de .info-container .about-gallery{
+        flex-direction:  column;
+    }
+    .acerca-de .info-container .about-gallery img{
+        width: 100%;
+    }
+    .our-projects .container-project .project-img img{
+        width: 80%;
+        margin-bottom: 30px;
+    }
+
+}
+@media only screen and (max-width: 588px) {
+    .img-header .welcome h1{
+        font-size: 30px;
+    }
+    .img-header .welcome hr{
+        width: 100px;
+    }    
+    .img-header .welcome p{
+        font-size: 17px;
+    }
+    .img-header .welcome > button{
+        width: 100px;
+        font-size: 17px;
+    }
+}
+@media only screen and (max-width: 890px){
+    .testimonios .box-testimonios .card-testimonio .card-img img{
+        width: 200px;
+        height: 200px;
+    }
+    .testimonios .box-testimonios .card-testimonio {
+        width: 100%;
+    }
+    .testimonios .box-testimonios .card-testimonio .testimonio-text h4{
+        font-size: 25px;
+    }
+    .testimonios .box-testimonios .card-testimonio .testimonio-text p{
+        font-size: 17px;
+        line-height: 35px;
+    }
+}
+@media only screen and(max-width:900px){
+    .footer .formulario-content{
+        width: 95%;
+        padding: 20px;
+    }
+    .footer .formulario-content #formulario input{
+        width: 100%;
+    }
+    .footer .formulario-content #formulario textarea{
+        width: 100%;
     }
 }
